src/tui/snapshots/yubitui__tui__fido2__tests__fido2_navigate_down.snap
---
source: src/tui/fido2.rs
expression: app.backend()
---
"▎                             FIDO2 / Security Key                              "
"▎                                                                               "
"Firmware: 5.4.3                                                                 "
"Algorithms: ES256, EdDSA                                                        "
"PIN: Set (8 retries remaining)                                                  "
"▎                                                                               "
"Passkeys (2)                                                                    "
"    github.com                      user@example.com                            "
"  > google.com                      user@gmail.com                              "
"▎                                                                               "
"▎ Esc  Esc Back   s  S PIN   d  D Delete   r  R Reset   p  P Unlock   ?  ? Help "
"▎                                                                               "
"▎                                                                               "
"▎                                                                               "
"▎                                                                               "
"▎                                                                               "
"▎                                                                               "
"▎                                                                               "
"▎                                                                               "
"▎                                                                               "
"▎                                                                               "
"▎                                                                               "
"▎                                                                               "
"▎                                                                               "
