src/tui/snapshots/yubitui__tui__fido2__tests__fido2_no_pin.snap
---
source: src/tui/fido2.rs
expression: app.backend()
---
"                              FIDO2 / Security Key                              "
"                                                                                "
"▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀"
"▐ Firmware: 5.4.3                                                              ▌"
"▐ Algorithms: ES256, EdDSA                                                     ▌"
"▐ PIN: ○ Not set                                                               ▌"
"▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄"
"                                                                                "
"                                                                                "
"No PIN configured. Set a PIN to enable passkey storage and WebAuthn login.      "
"                                                                                "
"                                                                                "
"                                                                                "
"▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁                                                                "
"▎   Set PIN    ▕                                                                "
"▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔                                                                "
"▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁                                                                "
"▎ Reset FIDO2  ▕                                                                "
"▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔                                                                "
"                                                                                "
"  Tab  Focus   Ctrl+P  Palette                                                  "
"                                                                                "
"                                                                                "
"                                                                                "
