src/tui/snapshots/yubitui__tui__fido2__tests__fido2_no_yubikey.snap
---
source: src/tui/fido2.rs
expression: app.backend()
---
"                              FIDO2 / Security Key                              "
"                                                                                "
"No YubiKey detected. Insert your YubiKey and press Esc to return.               "
"                                                                                "
"  Tab  Focus   Ctrl+P  Palette                                                  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
