src/tui/snapshots/yubitui__tui__fido2__tests__fido2_reset_guidance_waiting.snap
---
source: src/tui/fido2.rs
expression: app.backend()
---
"                                  FIDO2 Reset                                   "
"                                                                                "
"FIDO2 protocol requires the device to receive the reset command                 "
"within 10 seconds of being plugged in.                                          "
"                                                                                "
"Step 1: Unplug your YubiKey now.                                                "
"Step 2: Wait for the countdown to start.                                        "
"Step 3: Replug your YubiKey when prompted.                                      "
"                                                                                "
"Press Enter when your YubiKey is unplugged, or Esc to cancel.                   "
"                                                                                "
"  Tab  Focus   Ctrl+P  Palette                                                  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
